# CMPT433_as4

./: .gitignore  CMakeLists.txt
R5/src/: main.c  sharedDataLayout.h
app/: CMakeLists.txt
app/include/: beatPlayer.h  findDot.h  periodTimer.h  sharedDataLayout.h  stats.h  terminalOutput.h  udp_listener.h  updateLcd.h
app/src/: beatPlayer.c  beat_box.c  findDot.c  main.c  periodTimer.c  sleep_timer_helper.c  stats.c  terminalOutput.c  udp_listener.c  updateLcd.c
beatbox-server-copy/lib/: beatbox_server.js
beatbox-server-copy/public/javascripts/: beatbox_ui.js
hal/: CMakeLists.txt
hal/include/hal/: accelerometer.h  audioMixer.h  i2c.h  joystick.h  rotary_btn_statemachine.h  rotary_encoder_statemachine.h
hal/src/: accelerometer.c  audioMixer.c  i2c.c  joystick.c  lcd.c  rotary_btn_statemachine.c  rotary_encoder_statemachine.c
